# ESP32-Code

./: README.md
IoTivity-lite/esp32-example/: devbuildmake  esp32-example-config.json  esp32-example-main.c  esp32-example-main.cpp  esp32-example.c  new-esp32-device-builder.c  new-esp32.cpp  setup.sh
IoTivity-lite/vscode-esp32-example/: CMakeLists.txt  sdkconfig  setup.sh  vscode-esp32-example-config.json
IoTivity-lite/vscode-esp32-example/main/: CMakeLists.txt  main.c  pki_certs.h  vscode-esp32-example.c
esp32/: install.sh
esp32/esp32-example/: esp32-example.json
